manifests/network-policy/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-egress
  namespace: test
spec:
  podSelector: {} # all pods in "test" namespace
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["default","kube-system"]
    - ipBlock:
        cidr: 10.0.1.0/24
        except:
        - 10.0.1.3/32

# Pods in "test" namespace can send egress traffic to default, and kube-system namespaces and IP addresses in range 10.0.1.0/24 except 10.0.1.3/32
